fix: suppress the error console logging on a new player joined the server. (skin module)